# types-playground

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/apps/: logic.cpp
src/include/: logic.h
